examples/golden/missing_semicolon.golden
Exit code: 1
Summary: Warnings: 0, Errors: 1
---
Errors = [
Syntax Error: Expected ';' at line 5, column 12
    5 | funnier = 25
      |             ^ missing ;
]
Warnings = None

